# particle_colision

./: CMakeLists.txt  Makefile  README.md
include/: io.h
src/: io.c  main.c  physics.c
